# hausmeister

./: README.md
api/: .dockerignore  .env  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
api/migrations/: 20230118065934_Add_User_DB.sql  20230120154739_Add_Sessions.sql  20230122191546_Add_Reset_Requests.sql  20230128111909_Add_Name_to_user.sql  20230215141934_webauthn_support.sql
api/server/: .env  Cargo.toml  README.md  config.toml.template  design.md  sqlx-data.json
api/server/migrations/: 20230215141934_webauthn_support.sql
api/server/src/: database.rs  error_handling.rs  lib.rs  main.rs  session.rs  settings.rs  trace.rs  types.rs  webauthn.rs
api/server/src/database/: auth.rs
api/server/src/middlewares/: mod.rs
api/server/src/routes/: healthcheck.rs  login.rs  mod.rs  register.rs  user.rs
api/server/src/routes/webauthn/: mod.rs
api/server/src/types/: email.rs  mod.rs  name_of_user.rs  password.rs
api/server/tests/: health_check.rs
api/session/: Cargo.toml
api/session/src/: backend.rs  data.rs  header.rs  layer.rs  lib.rs
api/src/: database.rs  error_handling.rs  lib.rs  main.rs  settings.rs  trace.rs  types.rs
api/src/database/: auth.rs
api/src/middlewares/: session.rs
api/src/routes/: login.rs  mod.rs  reset.rs  user.rs
api/src/routes/webauthn/: mod.rs
frontend/: README.md  package.json  postcss.config.cjs
frontend/src/: app.d.ts  app.html  app.postcss  hooks.server.ts  stores.ts
frontend/src/components/: SyncedInput.svelte
frontend/src/lib/components/: ErrorAlert.svelte
frontend/src/routes/: +error.svelte  +layout.svelte
frontend/src/routes/(authorized)/: +layout.server.ts  +layout.svelte  +page.server.ts  +page.svelte
frontend/src/routes/(authorized)/logout/: +page.server.ts
frontend/src/routes/(unauthorized)/: +layout.svelte
frontend/src/routes/(unauthorized)/login/: +page.server.ts  +page.svelte
frontend/src/routes/(unauthorized)/request-reset/: +page.server.ts  +page.svelte
frontend/src/routes/(unauthorized)/reset/: +page.server.ts  +page.svelte
user_stories/: as_a_client  as_a_server_admin
