[package]
name = "hausmeister"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = { version = "0.4.1", features = ["std"] }
async-trait = "0.1.63"
axum = { version = "0.6.2", features = ["macros"] }
axum-extra = { version = "0.4.2", features = ["cookie"] }
color-eyre = "0.6.2"
config = "0.13.3"
dotenv = "0.15.0"
futures = "0.3.25"
redis = { version = "0.22.3", features = ["tokio-comp", "r2d2", "ahash", "serde", "serde_json"] }
serde = { version = "1.0.152", features = ["derive"] }
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "postgres", "uuid", "time"] }
tokio = { version = "1.24.1", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.3.5", features = ["trace", "cors", "request-id", "uuid"] }
tracing = "0.1.37"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "json"] }
tracing-tree = "0.2.2"
uuid = { version = "1.2.2", features = ["v4", "serde"] }
