[package]
name = "session"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.7", features = ["headers"], default-features=false}
headers = { version = "0.3.8", default-features = false }
hyper = { version = "0.14.24", default-features = false }
pin-project = { version = "1.0.12", default-features = false }
serde = { version = "1.0.152", default-features = false }
tower = { version = "0.4.13", default-features = false }
tower-http = { version = "0.3.5", default-features = false }
tracing = { version = "0.1.37", features = ["attributes"], default-features = false }
uuid = { version = "1.3.0", features = ["v4"], default-features = false }
